# MiniChat

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/Header/: ChatClient.h
Client/Source/: ChatClient.cpp  ChatData.cpp  ChatDataC.cpp  main.cpp
Server/: CMakeLists.txt
Server/Header/: ChatDataS.h  ChatServer.h
Server/Source/: ChatDataS.cpp  ChatServer.cpp  main.cpp
