cmake_minimum_required(VERSION 3.24 FATAL_ERROR)

get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED true)

project(${PROJECT_NAME} LANGUAGES CXX)

set(TARGET_NAME Network)
add_subdirectory(Library)
set(ADITIONAL_INCLUDE_DIRECTORIES ${ADITIONAL_INCLUDE_DIRECTORIES} ${${TARGET_NAME}_HEADER_DIRECTORY})
set(ADITIONAL_LINK_LIBRARIES ${ADITIONAL_LINK_LIBRARIES} ${TARGET_NAME})

set(TARGET_NAME MiniChatClient)
add_subdirectory(Client)

set(TARGET_NAME Server)
add_subdirectory(Server)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT MiniChatClient)
